# Bimto3dPrint

./: AGENTS.md  Bimto3dPrint.addin  CHANGELOG.md  CONTRIBUTING.md  GLOBAL RULES.md  Install_Bimto3dPrint.bat  README.md  ROADMAP.md  build.bat  clean.bat  install_dev.bat  uninstall.bat
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: idea.yml
Config/Schemas/: category_filter_schema.json  export_settings_schema.json
Documentation/: UserGuide.md
Documentation/Reference/: ifc_building_env_extractor_analysis.md  revit_builtin_categories.md
PythonProcessor/: README.md  pyproject.toml  requirements.txt
PythonProcessor/bimto3dprint/: __init__.py  config.py  main.py
PythonProcessor/bimto3dprint/exporters/: __init__.py  fbx_exporter.py  obj_exporter.py  stl_exporter.py
PythonProcessor/bimto3dprint/filters/: __init__.py  element_filter.py  geometry_cleaner.py
PythonProcessor/bimto3dprint/integrations/: ifc_env_extractor.py
PythonProcessor/bimto3dprint/processors/: ifc_loader.py  mesh_optimizer.py  shell_extractor.py
PythonProcessor/bimto3dprint/utils/: file_utils.py  ifc_schema.py  logger.py  units.py
PythonProcessor/bimto3dprint/validators/: __init__.py  mesh_validator.py  print_validator.py
PythonProcessor/tests/: README.md  test_units.py
RevitPlugin/: Bimto3dPrint.addin  Bimto3dPrint.addin.template  Bimto3dPrint.csproj  README.md  bimto3dprint.settings.json.template
RevitPlugin/Commands/: ExportShellCommand.cs
RevitPlugin/Filters/: CategoryFilter.cs  GeometryFilter.cs  ParameterFilter.cs
Scripts/: run_pipeline.py
docs/: IDEAS.md
(+41 files in other folders)
