[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "bimto3dprint"
version = "0.1.0"
description = "IFC processing pipeline for 3D printing."
readme = "README.md"
requires-python = ">=3.8"
license = { text = "Proprietary" }
authors = [
  { name = "Bimto3dPrint" }
]

dependencies = [
  "ifcopenshell",
  "trimesh",
  "numpy",
  "pymeshlab",
  "click",
  "pyyaml",
  "loguru"
]

[project.scripts]
bimto3dprint = "bimto3dprint.main:cli"
