[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "bimto3dprint"
version = "0.1.0"
description = "IFC processing pipeline for 3D printing."
readme = "README.md"
requires-python = ">=3.8"
license = { text = "Proprietary" }
authors = [
  { name = "Bimto3dPrint" }
]

dependencies = [
  "ifcopenshell>=0.7.0",
  "trimesh[easy]>=4.0.0",
  "numpy>=1.24.0",
  "pymeshlab>=2022.2",
  "click>=8.1.0",
  "pyyaml>=6.0",
  "loguru>=0.7.0"
]

[project.optional-dependencies]
dev = [
  "pytest>=7.4.0"
]

[project.scripts]
bimto3dprint = "bimto3dprint.main:cli"
